# scripts

./: .gitignore  README.md  organize_photos.py  pyproject.toml  test_organize_photos.py
OrganizePhotos/: file_types.py  get_photos_from_directory.py  move_files_to_folders.py  organize_photos.py  parser.py
OrganizePhotos/tests/: conftest.py  test_file_types.py  test_get_files_from_directory.py  test_get_photos_from_directory.py  test_move_files_to_folders.py  test_organize_photos.py  test_parser.py
