[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["arturgorski14 <arturgorski14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
pillow = "^10.0.1"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
